<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context="com.example.smason.finalprojectquiz.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nameField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:hint="@string/nameHere"
            android:textColorHint="#000"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:text="@string/question1"
            android:textSize="20sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question1radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/question1answer1"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/question1radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/question1answer2"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/question1radio3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/question1answer3"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/question1radio4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/question1answer4"
                android:textSize="16sp" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/question2"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/question2check1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:paddingLeft="10dp"
            android:text="@string/question2answer1"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/question2check2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:paddingLeft="10dp"
            android:text="@string/question2answer2"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/question2check3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:paddingLeft="10dp"
            android:text="@string/question2answer3"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/question2check4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:paddingLeft="10dp"
            android:text="@string/question2answer4"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/question2check5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:paddingLeft="10dp"
            android:text="@string/question2answer5"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/question2check6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:paddingLeft="10dp"
            android:text="@string/question2answer6"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/question3"
            android:textSize="20sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question3true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/fact"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/question3false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/lie"
                android:textSize="16sp" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/question4"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/question4answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:hint="@string/answerHere"
            android:textColorHint="#000"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/question5"
            android:textSize="20sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question5radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/question5answer1"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/question5radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/question5answer2"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/question5radio3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/question5answer3"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/question5radio4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/question5answer4"
                android:textSize="16sp" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/question6"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/question6check1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:paddingLeft="10dp"
            android:text="@string/question6answer1"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/question6check2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:paddingLeft="10dp"
            android:text="@string/question6answer2"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/question6check3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:paddingLeft="10dp"
            android:text="@string/question6answer3"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/question6check4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:paddingLeft="10dp"
            android:text="@string/question6answer4"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/question6check5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:paddingLeft="10dp"
            android:text="@string/question6answer5"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/question7"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/question7answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:hint="@string/answerHere" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:onClick="submitAnswers"
                android:text="@string/submit" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:onClick="resetAnswers"
                android:text="@string/reset" />

        </LinearLayout>

        <TextView
            android:id="@+id/scoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:textSize="20sp" />


    </LinearLayout>

</ScrollView>
